src/scss/index.scss
/* ... */
.footer {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100px;
    margin-top: 4rem;
    width: 80%;
    border-top: 1px solid $darkmode-bg-color;

    &::before, &::after {
        position: absolute;
        content: '';
        top: 0;
        width: 1px;
        height: 1px;
        border: 5px solid $darkmode-bg-color;
        border-bottom: 5px solid white;
    }

    &::before {
        left: 0;
    }

    &::after {
        right: 0;
    }
}

@media screen and (hover: none) {
    .fullscreen {
        .image {
            opacity: 1;
        }

        .action-message {
            color: white;
            margin: auto;
            z-index: -1;
        }

        .close-fullscreen {
            display: flex;
        }
    }

    .project-description:hover {
        .close-description {
            display: flex;
        }
    }

}

@media screen and (max-width: 350px) {
    .logo {
        width: 0;
    }
}

@media screen and (max-width: 750px) {

    body {
        font-size: 0.8rem;
    }

    .header {
        height: calc(#{$burger-dimensions} * 2);
        height: 0;

        .banner {
            top: 0;
            height: calc(#{$contactHeight} * 1.5);
            clip-path: none;
            justify-content: flex-end;
            background: none;

            .logo {
                height: 55%;
                right: 1rem;
                &::before {
                    display: none;
                }
            }
            .contact-links {
                display: none;
                width: 0;
            }
        }
    }


    .fullscreen {

        .close-fullscreen {
            width: 40px;
            height: 40px;
            font-size: 2rem;
        }
    }

    .main {
        width: 95vw;
        margin: 0 auto;

        &::before {
            display: none;
            width: 100%;
        }

        .container {
            margin: 0 auto;
            height: 100%;
            gap: 2rem;
            padding-top: calc(#{$contactHeight} * 1.5 + 1rem);

            & > .text-content {
                width: 90%;
            }
        }

        .fader {
            width: 95%;
            max-width: 550px;
            clip-path: none;
            padding: 0 0.75rem;

            .image-container {
                margin: 0.5rem auto;
                &::before, &::after {
                    display: none;
                }
            }

            .project-description {
            
                &:hover {
                    margin: 0;
                    padding-top: 1rem;
                    width: 100%;

                    h3 {
                        font-size: 1.2rem;
                    }

                    & > div {
                        margin: 0.5rem;
                    }
                }
            }

            .project-links a {
                font-size: 0.5rem;
                padding: 0.25rem 1rem;
            }
        }
    }

    .menu-container {

        .menu-toggler {
            display: block;
        }
    
        .menu {
            top: -110vh;
            opacity: 0;
            left: 0;
            width: 100vw;
            max-width: 100vw;
            height: 100vh;
            clip-path: none;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            background: rgba(0,0,0,0.97);
            transition: top 400ms ease 400ms, opacity 400ms ease;

            #darkmode-container {
                right: 10px;
                padding: 0;
            }

            ul {
                margin: 0;
                transform: rotate(0);
                font-size: 1.5rem;
                .link {
                    transform: rotate(0);
                }
                li {
                    margin: 0 auto;
                    text-align: center;
                }
            }
        }
        width: $burger-dimensions;
        height: $burger-dimensions;

        .burger-menu {
            display: flex;

            div {
                height: 5px;
                
                &::before {
                    top: -10px;
                    height: 5px;
                }
                
                &::after {
                    bottom: -10px;
                    height: 5px;
                }
            }
        }
    }

    .menu-toggler:checked ~ .menu {
        top: 0;
        opacity: 1;
        transition: top 400ms ease 40ms;
    }

    .menu-toggler:not(:checked) ~ .menu {
        opacity: 0;
    }

    .no-select {
        user-select: none;
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        -webkit-tap-highlight-color: transparent;
    }
}

@media screen and (min-width: 900px) {
    .fader {
        .image-container {
            margin: 1rem 1rem 1.5rem;
        }
    }

    .menu-container .menu {
        ul {
            font-size: 1.2rem;
        }
    }

    #email-link, #github-link, #linkedin-link {
        width: 2rem;
    }
}
/* ... */

